<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="New">New pets</string>
    <string name="Recent_seen">Recent Seen</string>
    <string name="News">News</string>
    <string name="filter">Filter</string>
    <string name="gender">Gender</string>
    <string name="girl">Girl</string>
    <string name="any">Any</string>
    <string name="boy">Boy</string>
    <string name="age">Age</string>
    <string name="size">Size</string>
    <string name="small">small</string>
    <string name="medium">medium</string>
    <string name="big">big</string>
    <string name="color">Color</string>
    <string name="cb_white">White</string>
    <string name="cb_ginger">Ginger</string>
    <string name="cb_fawn">Fawn</string>
    <string name="cb_grey">Grey</string>
    <string name="cb_light">Light</string>
    <string name="cb_dark">Dark</string>
    <string name="character">Character</string>
    <string name="active">Active</string>
    <string name="calm">Calm</string>
    <string name="gets_along_with">Gets along with</string>
    <string name="kids">Kids</string>
    <string name="dogs">Dogs</string>
    <string name="cats">Cats</string>
    <string name="apply">Apply</string>
    <string name="clear">Clear</string>
    <string name="any_gender">Any gender</string>
    <string name="size_for_found">\ • Size \</string>
    <string name="any_for_found">\ any</string>
    <string name="age_for_found">\ • age \</string>
    <string name="test_text">Рыжая красотка Викки ищет дом. Открытая, ласковая, послушная девочка с чувством собственного достоинства. С такой собакой сложно остаться незамеченным, и вы не один раз услышите: «А что это за порода такая?» Викки отлично гуляет, слушается на ура, быстро адаптируется к новому и всегда готова завести друзей. Молодая (и душой и телом) и игривая, любит побегать за мячиком или погрызть палочку. \nВикки очень верная и быстро привыкает к человеку. С ней очень комфортно и легко. Подойдёт в любую семью — с детьми, второй собакой или одинокому человеку: проблем с поведением нет, есть только больше количество положительных эмоций от общения с ней.</string>
    <string name="share_profile">Share profile</string>
    <string name="contact_handler">Contact handler</string>
    <string name="story">Story (no English translation yet):</string>
    <string name="share">Share</string>

    <string name="e_mail" translatable="false">e-mail</string>
    <string name="password">Password</string>
    <string name="repeat_password">Repeat password</string>
    <string name="auth_button">Log in</string>
    <string name="registration_button">Register</string>

    <string name="password_helper">* Password must:\n
        - contain numbers and latin letters;\n
        - be not shorter than 8 symbols;\n
        - contain at least 1 Upper case letter;\n
        - contain at least 1 Lower case letter;\n
        - contain at least 1 number;</string>
    <string name="reset_password_message">Forgot password?</string>
    <string name="error_auth_message">*Not possible to log in with data provided</string>
    <string name="error_reset_password_message">*Email is not registered</string>
    <string name="error_registration_message">*Not possible to register with data provided</string>
    <string name="error_internet_message">*Check network</string>
    <string name="message_auth">Message has been sent to the specified email address. Follow the link from the email and log in again</string>
    <string name="reset_password">Reset</string>

    <plurals name="age_data">
        <item quantity="one">%1$s year</item>
        <item quantity="other">%1$s years</item>
    </plurals>

    <string name="watsapp_message">Hello! That\'s about a dog named %1$s living at RedPine dog shelter</string>
    <string name="height">%1$s cm</string>
    <string name="how_to_help">You can help us:</string>
    <string name="become_volunteer">Volunteer</string>
    <string name="become_guardian">Become \na dog guardian</string>
    <string name="become_fincurator">Sponsor \na dog</string>
    <string name="make_gift">Make \na gift</string>
    <string name="make_donation">Donate</string>
    <string name="other_help">Other</string>
    <string name="card_transfer">1. Transfer to card</string>
    <string name="hungry_phone">2. Transfer to phone number</string>
    <string name="ya_wallet">3. Yandex wallet</string>
    <string name="ya_wallet_number" translatable="false">4100 1425 0115 963</string>
    <string name="hungry_phone_number" translatable="false">+7 963 767 79 57</string>
    <string name="sber_card_number" translatable="false">5469 3801 4999 3056</string>
    <string name="help">Help</string>
    <string name="none_found">No dogs found, try to change filtering parameters</string>
    <string name="initial_age_on_slider">3–6 years</string>
    <string name="all_dogs">All dogs</string>
    <string name="all">All</string>
    <string name="gets_along">gets along\u0020</string>
    <string name="follow_us">Follow us</string>
    <plurals name="found_pets">
        <item quantity="one">Found %1$d dog</item>
        <item quantity="few">Found %1$d dogs</item>
        <item quantity="many">Found %1$d dogs</item>
        <item quantity="other">Found %1$d dogs</item>
    </plurals>

</resources>